@@ -1,3 +1,8 @@
+2004-12-27  Andras Varga
+
+	* csimplemodule.cc: fix: in Windows, creation of activity() simple 
+	modules crashed if coroutine (win32 Fiber) could not be created.
+
 2004-12-22  Andras Varga
 
 	* chist.cc: cLongHistogram changes to enable num_cells set up 
